--- a/Bab/bab4.tex
+++ b/Bab/bab4.tex
@@ -3,13 +3,13 @@
 \section{Perancangan Antarmuka}
 Dalam perangkat lunak yang dibangun, tampilan yang digunakan adalah tampilan antarmuka grafis. Tampilan antarmuka ini berguna untuk mempermudah interaksi pengguna dengan perangkat lunak. Selain mempermudah, tampilan ini digunakan agar dapat menghasilkan visualisasi penempatan kamera CCTV sehingga pengguna dapat memahami penempatan-penempatan tersebut. Pada bagian ini akan dijelaskan bentuk dari setiap antarmuka. Berikut bentuk antarmuka-antarmuka tersebut:
 
-\begin{enumerate}
+\begin{itemize}
 	\item Antarmuka: \textbf{Penerima Masukan}\\
 	Antarmuka ini berfungsi untuk menerima masukan dari pengguna. Antarmuka ini dapat dilihat pada gambar~\ref{fig:input_mockup}. Pada antarmuka ini terdapat kolom-kolom masukan yang dapat diisi oleh pengguna. Pengguna dapat mengisi ukuran ruangan, spesifikasi kamera CCTV, dan ukuran terbesar cell pada kolom-kolom tersebut. Apabila pengguna sudah yakin dengan masukannya, maka pengguna dapat menekan tombol ''\textit{submit}'' yang akan mengarahkan pengguna pada antarmuka simulasi penempatan kamera CCTV.
 	\begin{figure}[h]
 		\centering  
 		\includegraphics[scale=0.6]{input_mockup}
-		\caption[Antarmuka penerima masukan]{Antarmuka penerima masukan}
+		\caption[Perancangan antarmuka penerima masukan]{Perancangan antarmuka penerima masukan}
 		\label{fig:input_mockup}
 	\end{figure}
 
@@ -28,17 +28,17 @@ Dalam perangkat lunak yang dibangun, tampilan yang digunakan adalah tampilan ant
 	\begin{figure}[h]
 		\centering  
 		\includegraphics[scale=0.5]{simulator_mockup}
-		\caption[Antarmuka penempatan kamera CCTV]{Antarmuka penempatan kamera CCTV}
+		\caption[Perancangan antarmuka penempatan kamera CCTV]{Perancangan antarmuka penempatan kamera CCTV}
 		\label{fig:simulator_mockup}
 	\end{figure}
-\end{enumerate}
+\end{itemize}
 
 \section{Perancangan Kelas}
-Pada bagian ini akan dijelaskan kelas-kelas yang digunakan dalam membangun perangkat lunak. Diagram kelas dapat dilihat pada gambar~\ref{fig:class_diagram_complete}.
+Pada bagian ini akan dijelaskan kelas-kelas yang digunakan dalam membangun perangkat lunak. Diagram kelas rinci dapat dilihat pada gambar~\ref{fig:class_diagram_complete}.
 \begin{sidewaysfigure}
 	\centering  
 	\includegraphics[scale=0.38]{class_diagram_complete}
-	\caption[Diagram kelas lengkap]{Diagram kelas lengkap}
+	\caption[Diagram kelas rinci]{Diagram kelas rinci}
 	\label{fig:class_diagram_complete}
 \end{sidewaysfigure}
 
