--- a/Bab/bab5.tex
+++ b/Bab/bab5.tex
@@ -1,22 +1,26 @@
 \chapter{Implementasi dan Pengujian}
-Pada bab ini, akan dibahas hasil dari implementasi perangkat lunak dan pengujian terhadap perangkat lunak. Pada tahap implementasi, terdapat spesifikasi lingkungan perangkat lunak yang digunakan. Spesifikasi ini juga digunakan pada tahap pengujian. Pada tahap pengujian, terdapat beberapa aspek yang diuji seperti pengujian terhadap fungsional perangkat lunak dan pengujian terhadap penyelesaian masalah.
+Pada bab ini, akan dibahas hasil dari implementasi dan pengujian terhadap perangkat lunak yang dibangun. Pada saat tahap implementasi, terdapat spesifikasi lingkungan yang digunakan. Spesifikasi yang sama juga digunakan pada tahap pengujian. Pada tahap pengujian, terdapat 2 jenis pengujian, yaitu pengujian fungsional dan pengujian perangkat lunak.
 
-\section{Lingkungan Implementasi dan Pengujian Perangkat Lunak}
-Berikut ini merupakan spesifikasi yang digunakan pada saat implementasi dan pengujian perangkat lunak:
+\section{Lingkungan Implementasi Perangkat Keras}
+Berikut ini merupakan spesifikasi perangkat keras yang digunakan pada tahap implementasi:
 \begin{itemize}
 	\item CPU: Intel\textsuperscript{\textregistered}{ }Core\texttrademark{ }i5-7200U Processor, 3M Cache, up to 3.10 Ghz
 	\item GPU: NVIDIA GeForce 930MX
 	\item RAM: 8GB
+\end{itemize}
+
+\section{Lingkungan Implementasi Perangkat Keras}
+Berikut ini merupakan spesifikasi perangkat lunak yang digunakan pada tahap implementasi:
+\begin{itemize}
 	\item OS: Windows 10 Pro, 64-bit
-%	\item Compiler: Java SE Development Kit 8 Update 152 (64-bit)
-%	\item Java Platform: Java 8 Update 152 (64-bit)
+	\item Pemrograman: Java 8 Update 152 (64-bit)
 \end{itemize}
 
 \section{Implementasi Antarmuka}
-Pada bagian ini, akan dibahas hasil implementasi antarmuka berdasarkan perancangan antarmuka sebelumnya. Antarmuka diimplementasikan dengan menggunakan \textit{framework} antarmuka JavaFX yang disediakan oleh Java. Berikut ini merupakan hasil dari implementasi antarmuka:
+Pada bagian ini, akan dibahas hasil implementasi antarmuka sesuai dengan perancangan antarmuka yang dilakukan pada bab sebelumnya. Antarmuka diimplementasikan dengan menggunakan pustaka antarmuka bernama JavaFX yang telah disediakan oleh Java. Berikut ini adalah hasil dari implementasi antarmuka:
 \begin{itemize}
 	\item Antarmuka: \textbf{Penerima Masukan}\\
-	Pada gambar~\ref{fig:ui_input} dapat terlihat hasil implementasi antarmuka penerima masukan. Pada antarmuka ini terdapat kolom-kolom masukan yang dapat diisi oleh pengguna. Apabila sudah selesai diisi, pengguna dapat menekan tombol ''\textit{submit}''.
+	Gambar~\ref{fig:ui_input} menunjukkan tampilan antarmuka penerima masukan. Pada antarmuka ini terdapat kolom-kolom masukan yang dapat diisi oleh pengguna. Apabila pengguna telah selesai mengisi kolom-kolom tersebut, pengguna dapat menekan tombol ''\textit{submit}'' untuk diarahkan ke antarmuka simulasi penempatan kamera CCTV.
 	\begin{figure}[H]
 		\centering  
 		\includegraphics[scale=0.6]{ui_input}
@@ -25,7 +29,7 @@ Pada bagian ini, akan dibahas hasil implementasi antarmuka berdasarkan perancang
 	\end{figure}
 	
 	\item Antarmuka: \textbf{Simulasi Penempatan Kamera CCTV}\\
-	Pada gambar~\ref{fig:ui_simulator} dapat terlihat hasil implementasi antarmuka simulasi penempatan kamera CCTV. Pada antarmuka ini, pengguna dapat melakukan simulasi penempatan kamera CCTV seperti dengan menempatkan kamera CCTV secara manual atau otomatis dan membuang suatu penempatan kamera CCTV. Pengguna dapat melihat visualisasi penempatan kamera CCTV melalui panel visualisasi yang berada di bagian kanan antarmuka. Informasi simulasi dan daftar penempatan kamera CCTV dapat dilihat pada panel informasi yang berada di bagian kiri antarmuka. Pada bagian kanan atas antarmuka terdapat panel penambah kamera CCTV yang digunakan untuk menambah penempatan kamera CCTV.
+	Gambar~\ref{fig:ui_simulator} menunjukkan tampilan antarmuka simulasi penempatan kamera CCTV. Pada antarmuka ini, pengguna dapat melakukan simulasi penempatan kamera CCTV. Pengguna dapat melihat penempatan-penempatan beserta dengan cakupannya melalui panel visualisasi yang berada di bagian kanan antarmuka. Pada bagian kiri terdapat panel informasi yang menunjukkan informasi dari simulasi yang sedang dijalankan. Pada panel ini, pengguna dapat melihat penempatan-penempatan yang sedang diterapkan dalam ruangan. Pada bagian kanan atas antarmuka terdapat panel penambah kamera CCTV yang digunakan untuk menambah penempatan kamera CCTV. Pada panel ini, pengguna dapat menambah penempatan dengan menentukan koordinat dan sudut arah pandang dari kamera CCTV. Pengguna juga dapat memerintahkan simulasi untuk mencari penempatan-penempatan kamera CCTV dengan menggunakan metode yang dibahas pada bagian penyelesaian masalah. Hal ini dapat dilakukan pengguna dengan menekan tombol ''\textit{auto place camera}'' yang berada pada panel penambah kamera CCTV.
 	\begin{figure}[H]
 		\centering  
 		\includegraphics[scale=0.45]{ui_simulator}
@@ -34,22 +38,25 @@ Pada bagian ini, akan dibahas hasil implementasi antarmuka berdasarkan perancang
 	\end{figure}
 \end{itemize}
 
-\section{Pengujian Perangkat Lunak}
-Perangkat lunak yang telah diimplementasikan perlu diuji terlebih dahulu agar berjalan sebagaimana mestinya. Pada bagian ini akan dibahas 2 jenis pengujian yang dilakukan, yaitu pengujian fungsional dan pengujian eksperimen. Pada pengujian fungsional, perangkat lunak akan diuji agar bekerja sesuai fungsinya. Pada pengujian eksperimen, akan diadakan beberapa eksperimen untuk mendapatkan hasil yang akan dianalisa.
+%\section{Pengujian Perangkat Lunak}
+%Perangkat lunak yang telah diimplementasikan perlu diuji terlebih dahulu agar berjalan sebagaimana mestinya. Pada bagian ini akan dibahas 2 jenis pengujian yang dilakukan, yaitu pengujian fungsional dan pengujian metode penyelesaian masalah. Pada pengujian fungsional, perangkat lunak akan diuji agar bekerja sesuai fungsinya. Pada pengujian metode penyelesaian masalah, perangkat lunak akan diuji dengan eksperimen-eksperimen masalah untuk memastikan perangkat lunak dapat menyelesaikan masalah.
 
 \subsection{Pengujian Fungsional}
-Pengujian yang terdapat pada pengujian fungsional dilakukan sesuai dengan skenario-skenario yang terdapat pada use case yang telah dibahas sebelumnya. Berikut ini pengujian-pengujian fungsional yang dilakukan:
+Pada bagian ini, perangkat lunak akan diuji untuk memastikan bahwa setiap fungsi-fungsi dalam perangkat lunak dapat bekerja sesuai tujuannya. Pengujian ini dilakukan sesuai dengan skenario-skenario yang terdapat pada use case. Berikut ini pengujian-pengujian fungsional yang dilakukan:
 
 \begin{itemize}
 	\item Pengujian: \textbf{Memasukkan Spesifikasi Masalah}\\
-	Pada pengujian ini akan diuji apakah perangkat lunak dapat membangun simulasi masalah yang sesuai dengan masukan yang diberikan oleh pengguna. Pengujian ini dimulai dengan mengisi masukan-masukan masalah melalui antarmuka penerima masukan. Berikut masukan-masukan masalah yang diisi melalui antarmuka penerima masukan seperti pada gambar~\ref{fig:testing_input_before}
+	Pada pengujian ini, akan diuji apakah perangkat lunak dapat membangun simulasi masalah yang sesuai dengan masukan yang diberikan oleh pengguna. Pada pengujian ini, akan digunakan masukan sebagai berikut:	
+	
 	\begin{itemize}
-		\item Lebar ruangan: 800cm
-		\item Panjang ruangan: 600cm
-		\item Jarak pandang kamera CCTV: 600cm
+		\item Lebar ruangan: 800 cm
+		\item Panjang ruangan: 600 cm
+		\item Jarak pandang kamera CCTV: 600 cm
 		\item Besar sudut pandang kamera CCTV: \(90^\circ\)
-		\item Ukuran terbesar cell: 100cm
+		\item Ukuran terbesar cell: 100 cm
 	\end{itemize}
+
+	Masukan-masukan tersebut dimasukkan melalui antarmuka penerima masukan seperti pada gambar~\ref{fig:testing_input_before}.
 	
 	\begin{figure}[H]
 		\centering  
@@ -58,7 +65,7 @@ Pengujian yang terdapat pada pengujian fungsional dilakukan sesuai dengan skenar
 		\label{fig:testing_input_before}
 	\end{figure}
 	
-	Setelah masukan-masukan tersebut diisi, tombol ''\textit{submit}'' ditekan. Perangkat lunak menampilkan antarmuka simulasi penempatan kamera CCTV seperti pada gambar~\ref{fig:testing_input_after}. 
+	Setelah masukan-masukan tersebut dimasukkan, tombol ''\textit{submit}'' ditekan. Kemudian, perangkat lunak menampilkan antarmuka simulasi penempatan kamera CCTV seperti pada gambar~\ref{fig:testing_input_after}. 
 	
 	\begin{figure}[H]
 		\centering  
@@ -67,17 +74,19 @@ Pengujian yang terdapat pada pengujian fungsional dilakukan sesuai dengan skenar
 		\label{fig:testing_input_after}
 	\end{figure}
 	
-	Pada gambar~\ref{fig:testing_input_side_pane_after} terdapat panel informasi yang menunjukkan informasi masalah yang sesuai dengan masukan diberikan sebelumnya. Hal ini menunjukkan bahwa proses memasukkan spesifikasi masalah telah berjalan sesuai dengan fungsinya. Dengan demikian, pengujian memasukkan spesifikasi masalah telah berhasil dilakukan.
+	Pada panel informasi, terdapat informasi masalah yang sesuai dengan masukan yang diberikan. Panel informasi dapat dilihat pada gambar~\ref{fig:testing_input_side_pane_after}.
 	
 	\begin{figure}[H]
 		\centering  
 		\includegraphics[scale=0.6]{testing_input_side_pane_after}
 		\caption[Tampilan panel informasi setelah pengisian masukan masalah]{Tampilan panel informasi setelah pengisian masukan masalah}
 		\label{fig:testing_input_side_pane_after}
-	\end{figure}
+	\end{figure}	
+	
+	Hal ini menunjukkan bahwa proses memasukkan spesifikasi masalah telah berjalan sesuai dengan fungsinya. Dengan demikian, pengujian memasukkan spesifikasi masalah telah berhasil dilakukan.
 	
 	\item Pengujian: \textbf{Menambahkan Penempatan Kamera CCTV}\\
-	Pada pengujian ini akan diuji apakah perangkat lunak dapat merespon penambahan penempatan kamera CCTV dengan memperbaharui panel informasi dan panel visualisasi penempatan kamera CCTV. Pengujian dilakukan dengan memilih koordinat (0, 0) sebagai posisi penempatan dan mengisi sudut (\(315^\circ\)) sebagai sudut arah pandang seperti pada gambar~\ref{fig:testing_add_placement_top_pane}.
+	Pada pengujian ini, akan diuji apakah perangkat lunak dapat merespon penambahan penempatan kamera CCTV dengan memperbaharui panel informasi dan panel visualisasi. Pengujian dilakukan dengan memilih titik (0, 0) dan mengisi sudut \(315^\circ\) sebagai posisi dan sudut arah pandang kamera CCTV. Gambar~\ref{fig:testing_add_placement_top_pane} menunjukkan tampilan pada saat mengisi penempatan kamera CCTV.
 	
 	\begin{figure}[H]
 		\centering  
@@ -86,7 +95,7 @@ Pengujian yang terdapat pada pengujian fungsional dilakukan sesuai dengan skenar
 		\label{fig:testing_add_placement_top_pane}
 	\end{figure}
 	
-	 Setelah mengisi informasi penempatan tersebut, tombol ''\textit{add camera}'' ditekan. Perangkat lunak merespon penambahan penempatan tersebut dengan memperbaharui panel informasi dan panel visualisasi seperti pada gambar~\ref{fig:testing_add_placement_side_pane_after} dan~\ref{fig:testing_add_placement_visualization_pane_after}. Proses menambahkan penempatan kamera CCTV telah berjalan sesuai dengan fungsinya. Dengan demikian, pengujian menambahkan penempatan kamera CCTV telah berhasil dilakukan.
+	 Setelah mengisi penempatan tersebut, tombol ''\textit{add camera}'' ditekan. Perangkat lunak merespon penambahan penempatan tersebut dengan memperbaharui panel informasi dan panel visualisasi seperti pada gambar~\ref{fig:testing_add_placement_side_pane_after} dan~\ref{fig:testing_add_placement_visualization_pane_after}. 
 	 
 	 \begin{figure}[H]
 		\centering  
@@ -101,11 +110,13 @@ Pengujian yang terdapat pada pengujian fungsional dilakukan sesuai dengan skenar
 		\caption[Tampilan panel visualisasi setelah menambah penempatan kamera CCTV]{Tampilan panel visualisasi setelah menambah penempatan kamera CCTV}
 		\label{fig:testing_add_placement_visualization_pane_after}
 	\end{figure}
+	 
+	 Pada panel informasi bagian daftar penempatan kamera CCTV, terdapat baris baru bertuliskan ''\textit{At} (0, 0) \textit{facing} \(315^\circ\)'' yang menunjukkan penempatan pada titik (0, 0) dengan sudut arah pandang \(315^\circ\). Selain itu, informasi-informasi lainnya yang terdapat pada panel informasi juga telah diperbaharui. Pada panel visualisasi terdapat visualisasi objek kamera CCTV pada titik (0, 0) dengan sudut arah pandang \(315^\circ\). Hal ini menunjukkan bahwa penambahan penempatan kamera CCTV telah berhasil dilakukan sehingga proses menambahkan penempatan kamera CCTV dinyatakan berjalan sesuai dengan fungsinya. Dengan demikian, pengujian menambahkan penempatan kamera CCTV telah berhasil dilakukan.
 	
 	\item Pengujian: \textbf{Membuang Penempatan Kamera CCTV}\\
-	Pada pengujian ini akan diuji apakah perangkat lunak dapat merespon pembuangan penempatan kamera CCTV dengan memperbaharui panel informasi dan panel visualisasi penempatan kamera CCTV. Pengujian dilakukan dengan memilih penempatan kamera CCTV yang akan dibuang. Penempatan kamera CCTV dipilih dari daftar penempatan kamera CCTV yang berada di dalam panel informasi. Pada pengujian ini, akan dipilih penempatan pada koordinat (0, 0) dengan sudut arah pandang (\(315^\circ\)) sebagai penempatan yang akan dibuang. Pada penempatan tersebut, tombol ''\textit{remove}'' ditekan. Perangkat lunak merespon pembuangan penempatan tersebut dengan memperbaharui panel informasi dan panel visualisasi seperti pada gambar~\ref{fig:testing_remove_placement_information_pane_after} dan~\ref{fig:testing_remove_placement_visualization_pane_after}. Proses membuang penempatan kamera CCTV telah berjalan sesuai dengan fungsinya. Dengan demikian, pengujian membuang penempatan kamera CCTV telah berhasil dilakukan.
+	Pada pengujian ini akan diuji apakah perangkat lunak dapat merespon pembuangan penempatan kamera CCTV dengan memperbaharui panel informasi dan panel visualisasi penempatan kamera CCTV. Pengujian dilakukan dengan memilih penempatan pada titik (0, 0) dengan sudut arah pandang (\(315^\circ\)) sebagai penempatan yang akan dibuang. Pada penempatan tersebut, tombol ''\textit{remove}'' ditekan. Perangkat lunak merespon pembuangan penempatan tersebut dengan memperbaharui panel informasi dan panel visualisasi seperti pada gambar~\ref{fig:testing_remove_placement_information_pane_after} dan~\ref{fig:testing_remove_placement_visualization_pane_after}. 
 	
-	 \begin{figure}[H]
+	\begin{figure}[H]
 		\centering  
 		\includegraphics[scale=0.6]{testing_input_side_pane_after}
 		\caption[Tampilan panel informasi setelah membuang penempatan kamera CCTV]{Tampilan panel informasi setelah membuang penempatan kamera CCTV}
@@ -117,5 +128,73 @@ Pengujian yang terdapat pada pengujian fungsional dilakukan sesuai dengan skenar
 		\includegraphics[scale=0.6]{testing_remove_placement_visualization_pane_after}
 		\caption[Tampilan panel visualisasi setelah membuang penempatan kamera CCTV]{Tampilan panel visualisasi setelah membuang penempatan kamera CCTV}
 		\label{fig:testing_remove_placement_visualization_pane_after}
-	\end{figure}
+	\end{figure}	
+	
+	Pada panel informasi bagian daftar penempatan, tidak lagi ditemukan penempatan pada titik (0, 0) dengan sudut arah pandang \(315^\circ\). Pada panel visualisasi juga tidak lagi ditemukan visualisasi objek kamera CCTV pada titik (0, 0) dengan sudut arah pandang \(315^\circ\). Hal ini menunjukkan bahwa pembuangan penempatan kamera CCTV telah berhasil dilakukan sehingga proses membuang penempatan kamera CCTV dinyatakan berjalan sesuai dengan fungsinya. Dengan demikian, pengujian membuang penempatan kamera CCTV telah berhasil dilakukan.
+
 \end{itemize}
+
+\subsection{Pengujian Perangkat Lunak}
+%Pada bagian ini akan dibahas pengujian yang bertujuan kebenaran metode penyelesaian masalah yang telah dibahas sebelumnya. Pada pemodelan masalah, telah dibahas pemodelan ruangan ke dalam bentuk grid point sehingga daerah dalam ruangan dimodelkan dalam bentuk cell-cell. Selain itu juga, telah dibahas bahwa cakupan kamera CCTV dinyatakan dalam bentuk kumpulan cell sehingga mencakup seluruh ruangan berarti sama dengan mencakup seluruh cell pada ruangan. Pemodelan masalah ini digunakan dalam metode penyelesaian masalah menggunakan teknik linear programming yang tujuannya adalah mencari penempatan-penempatan kamera CCTV yang berjumlah paling minimum yang mencakup seluruh ruangan. Sehingga tujuan dari pengujian ini adalah menguji apakah tujuan dari metode penyelesaian masalah tersebut telah tercapai.
+
+Pada pengujian ini akan dilakukan eksperimen-eksperimen untuk memastikan bahwa perangkat lunak dapat menyelesaikan permasalahan sesuai dengan tujuannya. Terdapat beberapa pengujian perangkat lunak yang dilakukan, yaitu:
+
+\begin{enumerate}
+	\item Eksperimen tingkat ketercakupan
+	\item Eksperimen tingkat \textit{overlap} dan \textit{out of bound}
+\end{enumerate}
+
+Pengujian dilakukan dengan menjalankan beberapa eksperimen. Pada setiap eksperimen akan dijalankan proses pencarian jumlah penempatan minimum dengan menekan tombol ''\textit{auto place camera}''. Hasil yang didapatkan dari setiap eksperimen akan dibandingkan satu sama lain sehingga menghasilkan kesimpulan. Berikut ini eksperimen yang dilakukan beserta dengan hasilnya:
+
+\begin{enumerate}
+	\item Eksperimen ke-1\\
+	Masukan:
+	\begin{itemize}
+		\item Lebar ruangan: 300 cm
+		\item Panjang ruangan: 200 cm
+		\item Jarak pandang kamera CCTV: 135 cm
+		\item Besar sudut pandang kamera CCTV: \(90^\circ\)
+		\item Ukuran terbesar cell: 25 cm
+	\end{itemize}
+	
+	Hasil:
+	\begin{itemize}
+		\item Ukuran grid point: 8 \(\times\) 12
+		\item Lebar cell: 25 cm
+		\item Panjang cell: 25 cm
+		\item Tingkat ketercakupan: 100\% (96/96 cells)
+		\item Tingkat \textit{overlap} dan \textit{out of bound}: 14.58\%
+		\item Jumlah kamera CCTV: 5 buah
+		\item Penempatan kamera CCTV:
+		\begin{enumerate}
+			\item Pada titik (75, 125) dengan sudut arah pandang \(85^\circ\)
+			\item Pada titik (125, 125) dengan sudut arah pandang \(195^\circ\)
+			\item Pada titik (225, 125) dengan sudut arah pandang \(85^\circ\)
+			\item Pada titik (225, 175) dengan sudut arah pandang \(155^\circ\)
+			\item Pada titik (300, 200) dengan sudut arah pandang \(130^\circ\)
+		\end{enumerate}
+	\end{itemize}
+\end{enumerate}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
